basiccrud/basicappdeployment/webapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-crud-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basiccrudapp
  template:
    metadata:
      labels:
        app: basiccrudapp
    spec:
      containers:
      - name: basiccrudapp
        image: rakesh8874/basiccrud:latest
        ports:
        - containerPort: 8000
