basiccrud/basicappdeployment/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basiccrud-app-service
spec:
  selector:
    app: basiccrudapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
