basiccrud/basicappdeployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-crud-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: basiccrud.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: basiccrud-app-service
                port:
                  number: 8000
